--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,11 @@
 /public/uploads/
 /public/covers/
 /todo
+
+public/webparser/sitemap/www\.yakaboo\.ua/
+
+public/Chtyvo/
+
+public/Yakaboo/
+
+public/webparser/sitemap/chtyvo\.org\.ua/
