Auto stash before merge of "master" and "origin/master"

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 !/log/.keep
 /tmp
 /config/database.yml
-/config/secrets.yml
+/config/secretsff.yml
 /public/Librusek/parts/
 /public/uploads/
 /public/covers/
