--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@
 !/log/.keep
 /tmp
 /config/database.yml
-/config/secretsff.yml
+/config/secrets.yml
 /public/Librusek/parts/
 /public/uploads/
 /public/covers/
